# ediaristas-django

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
administracao/: forms.py  models.py  urls.py  views.py
administracao/forms/: servico_forms.py  usuario_forms.py
administracao/migrations/: 0001_initial.py  0002_auto_20210726_2218.py
administracao/templates/: base.html
administracao/templates/adminlte/lib/: _main_footer.html  _main_header.html  _main_sidebar.html
administracao/templates/registration/: login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
administracao/templates/servicos/: form_servico.html  listar_servicos.html
administracao/templates/usuarios/: form_usuario.html  lista_usuarios.html
administracao/views/: servico_views.py  usuario_views.py
ediaristas/: settings.py  urls.py
