[tool.poetry]
name = "ediaristas"
version = "0.1.0"
description = ""
authors = ["Cleyson Lima <cleysonph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.5"
mysqlclient = "^2.0.3"
django-adminlte3 = "^0.1.6"
django-bootstrap4 = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
